--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 	<title>Kayllane Cardoso</title>
-	<link rel="stylesheet" href="file:///C:/Users/usuario/Documents/Kayllane%20Escola/Desing%20Web/3%C2%BA%20trimestre/index.css">
+	<link rel="stylesheet" href="file:///C:/Users/usuario/Documents/GitHub/index/index.css">
 	<meta charset="utf-8">
 	<style type="text/css"></style>
 	<font color="#353132"></font>
@@ -11,7 +11,7 @@
 <body>
 	<div class="img">
  	<center>
- 		<img src= "file:///C:/Users/usuario/Documents/What's%20Your%20Japanese%20Name_.jpg" width="800" height="250"></div>
+ 		<img src= "file:///C:/Users/usuario/Documents/GitHub/index/What's%20Your%20Japanese%20Name_.jpg" width="800" height="250"></div>
  	</center>
  	<center><h1> SOBRE:</h1>
  		<p style=""> Me chamo Kayllane, tenho 16 anos, resido na cidade de Nova Friburgo, Rio de Janeiro e estou cursando o Ensino Médio Técnico em Informática no Cefet-RJ/UnED Nova Fribugo.</p>
